--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <main>
       <section class="calc">
-        <p class="calc__display"></p>
+        <p class="calc__display">0</p>
         <div class="calc__numbers">
           <button class="number">0</button>
           <button class="number">1</button>
@@ -24,7 +24,15 @@
           <button class="number">8</button>
           <button class="number">9</button>
         </div>
-        <div class="calc__operators"></div>
+        <div class="calc__operators">
+          <button class="operand">+</button>
+          <button class="operand">-</button>
+          <button class="operand">*</button>
+          <button class="operand">/</button>
+          <button class="operand">^</button>
+          <button class="operand">%</button>
+          <button class="operand">%%</button>
+        </div>
       </section>
     </main>
   </body>
