restructure html and grid for easier layout and have fixed size for main calculator parent (for now)

--- a/index.html
+++ b/index.html
@@ -12,26 +12,25 @@
     <main>
       <section class="calc">
         <p class="calc__display">0</p>
-        <div class="calc__numbers">
+        <div class="calc__buttons">
           <button class="number">0</button>
           <button class="number">1</button>
           <button class="number">2</button>
+          <button class="operand">+</button>
           <button class="number">3</button>
           <button class="number">4</button>
           <button class="number">5</button>
+          <button class="operand">-</button>
           <button class="number">6</button>
           <button class="number">7</button>
           <button class="number">8</button>
-          <button class="number">9</button>
-        </div>
-        <div class="calc__operators">
-          <button class="operand">+</button>
-          <button class="operand">-</button>
           <button class="operand">*</button>
+          <button class="number">9</button>
           <button class="operand">/</button>
           <button class="operand">^</button>
           <button class="operand">%</button>
-          <button class="operand">%%</button>
+
+          <button id="equals">=</button>
         </div>
       </section>
     </main>
