add some buttons for clear all and clear last

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       <section class="calc">
         <p class="calc__display">0</p>
         <div class="calc__buttons">
+          <button class="clear-all">CA</button>
+          <button class="clear-last">CL</button>
+          <div></div>
+          <div></div>
           <button class="number">0</button>
           <button class="number">1</button>
           <button class="number">2</button>
