create switch block function to do some calculations

--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Basic Calc</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="./app.js"></script>
+    <script src="./app.js" async defer></script>
   </head>
   <body>
     <main>
       <section class="calc">
-        <p class="calc__display">0</p>
+        <span class="calc__display">
+          <p class="disp_1"></p>
+          <p class="disp_2"></p>
+        </span>
         <div class="calc__buttons">
           <button class="clear-all">CA</button>
           <button class="clear-last">CL</button>
