rewrtie calculate functoin to accept generic params

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <main>
       <section class="calc">
         <span class="calc__display">
-          <p class="disp_1">0</p>
-          <p class="disp_2">0</p>
+          <p class="disp_1"></p>
+          <p class="disp_2"></p>
         </span>
         <div class="calc__buttons">
           <button class="clear-all">CA</button>
