finalise logic for equals button

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <span class="calc__display">
           <p class="disp_1"></p>
           <p class="disp_2"></p>
+          <p class="disp_3"></p>
         </span>
         <div class="calc__buttons">
           <button class="clear-all">CA</button>
