add more detailed styles for calculator with custom colours and mixiins

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
   <body>
     <main>
       <section class="calc">
+        <div class="calc__name">
+          <span>calc-u-later</span>
+          <!-- <button>backlight on</button> -->
+        </div>
+
         <span class="calc__display">
           <p class="disp_1"></p>
           <p class="disp_2"></p>
@@ -42,5 +47,6 @@
         </div>
       </section>
     </main>
+    <footer><span>David Williams 2022</span></footer>
   </body>
 </html>
