add screenshot to README.md

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <main>
       <section class="calc">
         <div class="calc__name">
-          <span>calc-u-later</span>
+          <span>CALC-U-LATER</span>
           <!-- <button>backlight on</button> -->
         </div>
 
